fix: overflowing not working on notelist without setting height of content section to 0% still dont know why it does that

--- a/src/components/sidebar/sidebarAnimation.scss
+++ b/src/components/sidebar/sidebarAnimation.scss
@@ -2,9 +2,6 @@
 	transition: all 150ms ease-in-out;
 	overflow-y: hidden;
 	width: 0%;
-	& > * {
-		appearance: none;
-	}
 }
 .sidebar-active {
 	transition: all 150ms ease-in-out;
