--- a/src/index.scss
+++ b/src/index.scss
@@ -9,3 +9,8 @@
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
 }
+
+html,
+body {
+	overflow: hidden;
+}
